# feldspar-compiler

./: .gitignore  .travis.yml  LICENSE  README.md  Setup.hs  feldspar-compiler.cabal  sources.txt
Feldspar/: Compiler.hs  NameExtractor.hs  Transformation.hs
Feldspar/C/: feldspar_array.c  feldspar_array.h  feldspar_c99.c  feldspar_future.h  feldspar_tic64x.c  feldspar_tic64x.h  ivar.h  log.h  taskpool.c  taskpool.h
Feldspar/Compiler/Backend/C/Plugin/: Locator.hs  PrettyPrint.hs  Rule.hs  VariableRoleAssigner.hs
Feldspar/Compiler/Frontend/CommandLine/: API.hs  Main.hs
Feldspar/Compiler/Frontend/CommandLine/API/: Constants.hs  Library.hs  Options.hs
Feldspar/Compiler/Frontend/Interactive/: Interface.hs
Feldspar/Compiler/Imperative/: Frontend.hs
Feldspar/Compiler/Imperative/FromCore/: Binding.hs  Condition.hs  ConditionM.hs  Future.hs  Loop.hs  MutableToPure.hs  Par.hs  SourceInfo.hs
Feldspar/Compiler/Imperative/Plugin/: ConstantFolding.hs  Free.hs  Unroll.hs
Feldspar/Transformation/: Framework.hs
benchs/: BenchmarkUtils.hs  CRC.hs  FFT.hs  MatMul.hs  MatMulC.c  MatMulC.h
clib/: feldspar_array.h  feldspar_c99.c  feldspar_tic64x.c  feldspar_tic64x.h  ivar.c  ivar.h  taskpool.c
lib/Feldspar/: Compiler.hs  NameExtractor.hs  Runtime.hs  Transformation.hs
lib/Feldspar/C/: feldspar_array.h  feldspar_c99.c  feldspar_c99.h  ivar.c  ivar.h  taskpool.c  taskpool.h
lib/Feldspar/Compiler/: CallConv.hs  Compiler.hs  Error.hs  ExternalProgram.hs  Internal.hs  Marshal.hs  Plugin.hs
lib/Feldspar/Compiler/Backend/C/: CodeGeneration.hs  Library.hs  MachineLowering.hs  Options.hs  Platforms.hs  RuntimeLibrary.hs  Tic64x.hs
lib/Feldspar/Compiler/Backend/C/Plugin/: BlockProgramHandler.hs  Locator.hs  PrettyPrint.hs  Rule.hs  TypeCorrector.hs  TypeDefinitionGenerator.hs  VariableRoleAssigner.hs
lib/Feldspar/Compiler/Frontend/Interactive/: Interface.hs
lib/Feldspar/Compiler/Imperative/: ExternalProgram.hs  FromCore.hs  Frontend.hs  Representation.hs  TransformationInstance.hs
lib/Feldspar/Compiler/Imperative/FromCore/: Array.hs  Binding.hs  Condition.hs  ConditionM.hs  Elements.hs  Error.hs  FFI.hs  Future.hs  Interpretation.hs  Literal.hs  Loop.hs  Mutable.hs  MutableToPure.hs  NoInline.hs  Par.hs  Primitive.hs  Save.hs  SizeProp.hs  SourceInfo.hs  Switch.hs  Tuple.hs
lib/Feldspar/Compiler/Imperative/Plugin/: CollectFreeVars.hs  ConstantFolding.hs  Free.hs  IVars.hs  Naming.hs  Unroll.hs
lib/Feldspar/Transformation/: Framework.hs
src/Feldspar/: Compiler.hs  Runtime.hs
src/Feldspar/Compiler/: Compiler.hs  Error.hs  ExternalProgram.hs  Internal.hs  Marshal.hs  Plugin.hs
src/Feldspar/Compiler/Backend/C/: CodeGeneration.hs  Library.hs  MachineLowering.hs  Options.hs  Platforms.hs  RuntimeLibrary.hs  Tic64x.hs
src/Feldspar/Compiler/Frontend/CommandLine/: API.hs  Main.hs  NameExtractor.hs
src/Feldspar/Compiler/Frontend/CommandLine/API/: Constants.hs  Library.hs  Options.hs
src/Feldspar/Compiler/Frontend/Interactive/: Interface.hs
src/Feldspar/Compiler/Imperative/: ArrayOps.hs  ExternalProgram.hs  FromCore.hs  Frontend.hs  Representation.hs
src/Feldspar/Compiler/Imperative/FromCore/: Interpretation.hs
tests/: CallingConvention.hs  RegressionTests.hs
tests/gold/: arrayInStruct.c  arrayInStruct.h  arrayInStructInStruct.c  arrayInStructInStruct.h  arrayInStruct_openMP.c  arrayInStruct_wool.c  complexWhileCond.c  complexWhileCond.h  concatV.c  concatV.h  concatVM.c  concatVM.h  concatV_build_test.c  concatV_build_test.h  divConq3.c  divConq3.h  example9.c  example9.h  fut1.c  fut1.h  fut1_ret.c  fut1_ret.h  issue128_ex1.c  issue128_ex2.c  ivartest.c  ivartest.h  ivartest2.c  ivartest2.h  metrics.c  metrics.h  metrics_build_test.c  pairParam.c  pairParam.h  pairParam2.c  pairParam2.h  pairParam_build_test.c  pairParam_build_test.h  pairParam_ret.c  scanlPush.c  scanlPush.h  (+10 more)
tools/: travis-cabal-apt-install
