name:           feldspar-compiler
version:        0.6.1.0
cabal-version:  >= 1.14
build-type:     Custom
license:        BSD3
license-file:   LICENSE
copyright:      Copyright (c) 2013 Emil Axelsson, Peter Jonsson,
                                   Anders Persson, Josef Svenningsson
                Copyright (c) 2012 Emil Axelsson, Gergely Dévai,
                                   Anders Persson, Josef Svenningsson
                Copyright (c) 2009-2011, ERICSSON AB
author:         Feldspar group,
                Eotvos Lorand University Faculty of Informatics
maintainer:     deva@inf.elte.hu
stability:      experimental
homepage:       http://feldspar.github.com
bug-reports:    https://github.com/feldspar/feldspar-compiler/issues
synopsis:       Compiler for the Feldspar language
description:    Feldspar (**F**unctional **E**mbedded **L**anguage for **DSP**
                and **PAR**allelism) is an embedded DSL for describing digital
                signal processing algorithms.
                This library (FeldsparCompiler) contains a prototype compiler
                that supports C code generation from programs written in this
                language both according to ANSI C and also targeted to a real
                DSP HW.
category:       Compiler
tested-with:    GHC==7.8, GHC==7.6, GHC==7.4

source-repository head
  type:     git
  location: git://github.com/Feldspar/feldspar-compiler.git

Flag UseICC
  Description:         Use ICC for compiling benchmarks.
  Default:             False

library
  hs-source-dirs: lib

  exposed-modules:
    Feldspar.Compiler
    Feldspar.Compiler.Imperative.Representation
    Feldspar.Compiler.Imperative.ExternalProgram
    Feldspar.Compiler.Imperative.FromCore
    Feldspar.Compiler.Imperative.FromCore.Interpretation
    Feldspar.Compiler.Imperative.Frontend
    Feldspar.Compiler.Backend.C.CodeGeneration
    Feldspar.Compiler.Backend.C.Library
    Feldspar.Compiler.Backend.C.MachineLowering
    Feldspar.Compiler.Backend.C.Tic64x
    Feldspar.Compiler.Backend.C.Options
    Feldspar.Compiler.Backend.C.Platforms
    Feldspar.Compiler.Backend.C.RuntimeLibrary
    Feldspar.Compiler.Frontend.Interactive.Interface
    Feldspar.Compiler.Plugin
    Feldspar.Compiler.Marshal
    Feldspar.Compiler.CallConv
    Feldspar.Compiler.Compiler
    Feldspar.Compiler.Error
    Feldspar.Compiler.ExternalProgram
    Feldspar.Compiler.Internal
    Feldspar.Runtime

  default-language: Haskell2010

  build-depends:
    base              == 4.*,
    Cabal,
    ghc-paths,
    plugins-multistage >= 0.5.1 && < 0.6,
    feldspar-language  >= 0.6.1 && < 0.7,
    language-c-quote   >= 0.7.7 && < 1.0,
    bytestring         >= 0.9   && < 0.11,
    srcloc,
    mtl,
    pretty,
    filepath,
    containers,
    process,
    directory >= 1.1,
    template-haskell,
    plugins >= 1.5.4,
    data-default >= 0.5,
    storable-tuple  >= 0.0.2,
    storable-record >= 0.0.2.5

  default-extensions:

  include-dirs:
    ./lib/Feldspar/C

  c-sources:
   lib/Feldspar/C/feldspar_c99.c
   lib/Feldspar/C/taskpool.c
   lib/Feldspar/C/ivar.c

  cc-options: -std=c99 -Wall -fPIC

  if os(linux)
    extra-libraries: gcc_s

  install-includes:
    feldspar_array.h
    feldspar_c99.h
    feldspar_c99.c
    feldspar_tic64x.h
    feldspar_tic64x.c
    feldspar_future.h
    log.h
    ivar.h
    ivar.c
    taskpool.h
    taskpool.c

  ghc-options: -fcontext-stack=100

  cpp-options: -DRELEASE

-- executable feldspar
--   hs-source-dirs: src

--   main-is : Feldspar/Compiler/Frontend/CommandLine/Main.hs

--   default-language: Haskell2010

--   other-modules:
--     Feldspar.Compiler.Frontend.CommandLine.NameExtractor
--     Feldspar.Compiler.Frontend.CommandLine.API.Library
--     Feldspar.Compiler.Frontend.CommandLine.API.Constants
--     Feldspar.Compiler.Frontend.CommandLine.API.Options
--     Feldspar.Compiler.Frontend.CommandLine.API

--   build-depends:
--     feldspar-language,
--     feldspar-compiler,
--     mtl,
--     base,
--     hint,
--     process,
--     filepath,
--     directory,
--     ansi-terminal,
--     MonadCatchIO-mtl,
--     haskell-src-exts >= 1.14

--   default-extensions:

--   ghc-options: -fcontext-stack=100

--   cpp-options: -DRELEASE

test-suite regression
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: RegressionTests.hs

  if os(linux)
    ghc-options: -dynamic

  default-language: Haskell2010

  build-depends:
    feldspar-language,
    feldspar-compiler,
    mtl,
    base,
    Cabal,
    process,
    bytestring       >= 0.9 && < 0.11,
    stringsearch     >= 0.3,
    tasty            >= 0.3,
    tasty-golden     >= 2.0 && < 2.3 || >= 2.3.0.1,
    tasty-quickcheck >= 0.3,
    QuickCheck       >= 2.7.1 && < 3.0

test-suite callconv
  type: exitcode-stdio-1.0

  hs-source-dirs: tests

  main-is: CallingConvention.hs

  if os(linux)
    ghc-options: -dynamic

  default-language: Haskell2010

  build-depends:
    feldspar-language,
    feldspar-compiler,
    base,
    tasty            >= 0.3,
    tasty-quickcheck >= 0.3,
    QuickCheck       >= 2.7.1 && < 3.0

benchmark crc
  type: exitcode-stdio-1.0

  hs-source-dirs: benchs

  main-is: CRC.hs

  if os(linux)
    ghc-options: -dynamic

  default-language: Haskell2010

  ghc-options: -O2

  build-depends:
    feldspar-language,
    feldspar-compiler,
    data-default       >= 0.5.3 && < 0.6,
    base,
    deepseq,
    criterion          >= 1.0

benchmark fft
  type: exitcode-stdio-1.0

  hs-source-dirs: benchs

  main-is: FFT.hs

  if os(linux)
    ghc-options: -dynamic

  default-language: Haskell2010

  ghc-options: -O2

  build-depends:
    feldspar-language,
    feldspar-compiler,
    data-default       >= 0.5.3 && < 0.6,
    base,
    deepseq,
    criterion

benchmark matmul
  type: exitcode-stdio-1.0

  hs-source-dirs: benchs

  main-is: MatMul.hs

  if os(linux)
    ghc-options: -dynamic

  c-sources: benchs/MatMulC.c

  default-language: Haskell2010

  ghc-options: -O2

  CC-Options: -O2 -fno-vectorize
  if flag(UseICC)
    x-cc-name: icc

  build-depends:
    feldspar-language,
    feldspar-compiler,
    plugins-multistage,
    data-default       >= 0.5.3 && < 0.6,
    base,
    deepseq,
    criterion
